--- a/app/src/main/res/layout-v21/include_time_activity_card_one.xml
+++ b/app/src/main/res/layout-v21/include_time_activity_card_one.xml
@@ -23,7 +23,7 @@
 		android:layout_weight="1"
 		android:orientation="vertical">
 
-		<TextView
+		<TextSwitcher
 			android:id="@+id/tv_card_one_head"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
@@ -46,57 +46,79 @@
 			android:layout_width="match_parent"
 			android:layout_height="20dp"/>
 
-		<TextView
-			android:id="@+id/tv_card_one_cell_1"
+		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:paddingBottom="4dp"
-			android:paddingLeft="@dimen/card_subhead_padding_left"
-			android:paddingTop="4dp"
-			android:text="* %s"
-			/>
+			android:layout_marginLeft="32dp"
+			android:layout_marginRight="32dp"
+			android:background="@drawable/tv_rect_background"
+			android:orientation="vertical">
 
-		<TextView
-			android:id="@+id/tv_card_one_cell_2"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:paddingBottom="4dp"
-			android:paddingLeft="@dimen/card_subhead_padding_left"
-			android:paddingTop="4dp"
-			android:text="* %s"
-			/>
+			<TextView
+				android:id="@+id/tv_card_one_cell_1"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:paddingBottom="8dp"
+				android:paddingTop="8dp"
+				android:text="* %s"
+				/>
 
-		<TextView
-			android:id="@+id/tv_card_one_cell_3"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:paddingBottom="4dp"
-			android:paddingLeft="@dimen/card_subhead_padding_left"
-			android:paddingTop="4dp"
-			android:text="* %s"
-			/>
+			<View
+				android:layout_width="match_parent"
+				android:layout_height="0.1dp"
+				android:background="@color/common_black"/>
 
-		<TextView
-			android:id="@+id/tv_card_one_cell_4"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:paddingBottom="4dp"
-			android:paddingLeft="@dimen/card_subhead_padding_left"
-			android:paddingTop="4dp"
-			android:text="* %s"
-			/>
+			<TextView
+				android:id="@+id/tv_card_one_cell_2"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:paddingBottom="8dp"
+				android:paddingTop="8dp"
+				android:text="* %s"
+				/>
+
+			<View
+				android:layout_width="match_parent"
+				android:layout_height="0.1dp"
+				android:background="@color/common_black"/>
+
+			<TextView
+				android:id="@+id/tv_card_one_cell_3"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:paddingBottom="8dp"
+				android:paddingTop="8dp"
+				android:text="* %s"
+				/>
+
+			<View
+				android:layout_width="match_parent"
+				android:layout_height="0.1dp"
+				android:background="@color/common_black"/>
+
+			<TextView
+				android:id="@+id/tv_card_one_cell_4"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:paddingBottom="8dp"
+				android:paddingTop="8dp"
+				android:text="* %s"
+				/>
+		</LinearLayout>
 	</LinearLayout>
 
 	<FrameLayout
 		android:layout_width="match_parent"
-		android:layout_height="72dp">
+		android:layout_height="100dp">
 
 		<Button
 			android:id="@+id/btn_time_leave"
-			android:layout_width="wrap_content"
+			android:layout_width="120dp"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center"
-			android:background="?android:attr/selectableItemBackgroundBorderless"
+			android:layout_marginBottom="14dp"
+			android:background="@drawable/btn_card_one"
+			android:textColor="@color/common_black"
 			android:gravity="center"
 			android:text="@string/card_one_btn"
 			android:textSize="@dimen/card_btn_text_size"/>
