--- a/app/src/main/res/layout/my_wishes_item.xml
+++ b/app/src/main/res/layout/my_wishes_item.xml
@@ -3,6 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <TextView
         android:paddingLeft="16dp"
         android:paddingRight="8dp"
@@ -25,5 +32,12 @@
             android:layout_height="wrap_content"
             android:textColor="#bd000000"/>
     </LinearLayout>
-
+    </LinearLayout>
+        <View
+            android:id="@+id/wishes_shader"
+            android:visibility="gone"
+            android:background="@color/black_overlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </FrameLayout>
 </LinearLayout>
