--- a/app/src/main/res/layout/activity_my_wishes_detail.xml
+++ b/app/src/main/res/layout/activity_my_wishes_detail.xml
@@ -23,10 +23,10 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
+	    android:background="#FFFFFF"
         android:id="@+id/detail_viewPager"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         />
 
 </android.support.design.widget.CoordinatorLayout>
