--- a/app/src/main/res/layout/activity_other_wishes.xml
+++ b/app/src/main/res/layout/activity_other_wishes.xml
@@ -25,6 +25,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
+	    android:background="#FFFFFF"
         android:id="@+id/rv_other_wishes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
