--- a/app/src/main/res/layout/include_time_activity_card_two.xml
+++ b/app/src/main/res/layout/include_time_activity_card_two.xml
@@ -10,11 +10,11 @@
 	>
 
 	<ImageView
-		android:padding="16dp"
-		android:src="@drawable/sandy_glass"
 		android:layout_width="match_parent"
 		android:layout_height="0dp"
-		android:layout_weight="1"/>
+		android:layout_weight="1"
+		android:padding="16dp"
+		android:src="@drawable/sandy_glass"/>
 
 	<LinearLayout
 		android:layout_width="match_parent"
@@ -44,61 +44,80 @@
 			android:text="@string/card_two_subhead"
 			android:textColor="@color/card_two_subhead_text_color"
 			android:textSize="@dimen/card_subhead_size"/>
+
 		<View
 			android:layout_width="match_parent"
 			android:layout_height="20dp"/>
-		<TextView
-			android:id="@+id/tv_card_two_cell_1"
-			android:paddingTop="4dp"
-			android:paddingBottom="4dp"
+
+		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:paddingLeft="@dimen/card_subhead_padding_left"
-			android:text="在教室"
-			android:textColor="@color/card_text_color"/>
+			android:layout_marginLeft="32dp"
+			android:layout_marginRight="32dp"
+			android:background="@drawable/tv_rect_background_white"
+			android:orientation="vertical">
 
-		<TextView
-			android:id="@+id/tv_card_two_cell_2"
-			android:paddingTop="4dp"
-			android:paddingBottom="4dp"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:paddingLeft="@dimen/card_subhead_padding_left"
-			android:text="在寝室"
-			android:textColor="@color/card_text_color"/>
+			<TextView
+				android:id="@+id/tv_card_two_cell_1"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:paddingBottom="8dp"
+				android:paddingTop="8dp"
+				android:text="在教室"
+				android:textColor="@color/card_text_color"/>
+			<View
+				android:layout_width="match_parent"
+				android:layout_height="0.1dp"
+				android:background="#FFFFFF"/>
 
-		<TextView
-			android:id="@+id/tv_card_two_cell_3"
-			android:paddingTop="4dp"
-			android:paddingBottom="4dp"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:paddingLeft="@dimen/card_subhead_padding_left"
-			android:text="在图书馆"
-			android:textColor="@color/card_text_color"/>
+			<TextView
+				android:id="@+id/tv_card_two_cell_2"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:paddingBottom="8dp"
+				android:paddingTop="8dp"
+				android:text="在寝室"
+				android:textColor="@color/card_text_color"/>
+			<View
+				android:layout_width="match_parent"
+				android:layout_height="0.1dp"
+				android:background="#FFFFFF"/>
 
-		<TextView
-			android:id="@+id/tv_card_two_cell_4"
-			android:paddingTop="4dp"
-			android:paddingBottom="4dp"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:paddingLeft="@dimen/card_subhead_padding_left"
-			android:text="在酒店"
-			android:textColor="@color/card_text_color"/>
+			<TextView
+				android:id="@+id/tv_card_two_cell_3"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:paddingBottom="8dp"
+				android:paddingTop="8dp"
+				android:text="在图书馆"
+				android:textColor="@color/card_text_color"/>
+			<View
+				android:layout_width="match_parent"
+				android:layout_height="0.1dp"
+				android:background="#FFFFFF"/>
 
+			<TextView
+				android:id="@+id/tv_card_two_cell_4"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:paddingBottom="8dp"
+				android:paddingTop="8dp"
+				android:text="在酒店"
+				android:textColor="@color/card_text_color"/>
+		</LinearLayout>
 	</LinearLayout>
 
 	<FrameLayout
 		android:layout_width="match_parent"
-		android:layout_height="72dp">
+		android:layout_height="100dp">
 
 		<Button
 			android:id="@+id/btn_time_now"
-			android:layout_width="wrap_content"
+			android:layout_width="120dp"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center"
-			android:background="@android:color/transparent"
+			android:layout_marginBottom="16dp"
+			android:background="@drawable/btn_card_two"
 			android:gravity="center"
 			android:text="@string/card_two_btn"
 			android:textColor="@color/card_two_btn_text_color"
