--- a/app/src/main/res/layout/my_wishes_item.xml
+++ b/app/src/main/res/layout/my_wishes_item.xml
@@ -1,43 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-    <TextView
-        android:paddingLeft="16dp"
-        android:paddingRight="8dp"
-        android:paddingBottom="8dp"
-        android:paddingTop="8dp"
-        android:maxLines="1"
-        android:textSize="24dp"
-        android:id="@+id/my_wishes_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#bd000000"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:paddingLeft="20dp"
-            android:id="@+id/my_wishes_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#bd000000"/>
-    </LinearLayout>
-    </LinearLayout>
-        <View
-            android:id="@+id/wishes_shader"
-            android:visibility="gone"
-            android:background="@color/black_overlay"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </FrameLayout>
-</LinearLayout>
+
+<android.support.v7.widget.CardView
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	android:layout_marginLeft="8dp"
+	android:layout_marginRight="8dp"
+	android:layout_marginTop="4dp"
+	android:layout_marginBottom="4dp"
+	app:cardCornerRadius="2dp"
+	android:layout_width="match_parent"
+	android:layout_height="100dp">
+
+	<LinearLayout
+		android:layout_margin="4dp"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:orientation="vertical">
+
+		<TextView
+			android:id="@+id/my_wishes_text"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:maxLines="1"
+			android:paddingBottom="8dp"
+			android:paddingLeft="16dp"
+			android:paddingRight="8dp"
+			android:paddingTop="8dp"
+			android:text="Preview"
+			android:textColor="#bd000000"
+			android:textSize="24dp"/>
+
+		<LinearLayout
+			android:gravity="right"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal">
+
+			<TextView
+				android:id="@+id/my_wishes_time"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:paddingRight="16dp"
+				android:text="Preview"
+				android:textColor="#bd000000"/>
+		</LinearLayout>
+	</LinearLayout>
+
+	<View
+		android:id="@+id/wishes_shader"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:background="@color/black_overlay"
+		android:visibility="gone"/>
+</android.support.v7.widget.CardView>
