各种界面的优化

--- a/app/src/main/res/layout-v21/activity_other_wishes.xml
+++ b/app/src/main/res/layout-v21/activity_other_wishes.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#FFF"
-    android:orientation="vertical"
     tools:context="com.iec.dwx.timer.Fragments.MyWishesFragment"
     android:clickable="true">
 
@@ -23,10 +22,6 @@
             app:subtitleTextColor="@color/toolbar_text_color"
             app:layout_scrollFlags="scroll|enterAlways"
             app:subtitle="云端心愿"/>
-	    <View
-		    android:layout_width="match_parent"
-		    android:layout_height="0.1dp"
-		    android:background="@color/common_black"/>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
@@ -34,7 +29,7 @@
         android:id="@+id/rv_other_wishes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     </android.support.v7.widget.RecyclerView>
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
