--- a/app/src/main/res/layout-v21/activity_my_wishes_detail.xml
+++ b/app/src/main/res/layout-v21/activity_my_wishes_detail.xml
@@ -1,40 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#FFF"
-    android:orientation="vertical"
     tools:context="com.iec.dwx.timer.Fragments.MyWishesFragment"
     android:clickable="true">
-
-    <!-- TODO: Update blank fragment layout -->
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_other_wishes"
+            android:id="@+id/toolbar_my_wishes_details"
             android:layout_width="match_parent"
             app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
             android:layout_height="?actionBarSize"
             app:subtitleTextColor="@color/toolbar_text_color"
             app:layout_scrollFlags="scroll|enterAlways"
-            app:subtitle="云端心愿"/>
-	    <View
-		    android:layout_width="match_parent"
-		    android:layout_height="0.1dp"
-		    android:background="@color/common_black"/>
+            app:subtitle="我的心愿详情"/>
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <android.support.v4.view.ViewPager
 	    android:background="#FFFFFF"
-        android:id="@+id/rv_other_wishes"
-        android:layout_width="match_parent"
+        android:id="@+id/detail_viewPager"
         android:layout_height="match_parent"
-        >
+        android:layout_width="match_parent"
+        />
 
-    </android.support.v7.widget.RecyclerView>
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
