--- a/app/src/main/res/layout/activity_my_wishes_detail.xml
+++ b/app/src/main/res/layout/activity_my_wishes_detail.xml
@@ -20,6 +20,10 @@
             app:subtitleTextColor="@color/toolbar_text_color"
             app:layout_scrollFlags="scroll|enterAlways"
             app:subtitle="我的心愿详情"/>
+	    <View
+		    android:layout_width="match_parent"
+		    android:layout_height="0.1dp"
+		    android:background="@color/common_black"/>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
