--- a/app/src/main/res/layout/fragment_achievement.xml
+++ b/app/src/main/res/layout/fragment_achievement.xml
@@ -1,10 +1,11 @@
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="#fff"
+	android:orientation="vertical"
 	tools:context="com.iec.dwx.timer.Fragments.AchievementFragment">
 
 	<android.support.design.widget.AppBarLayout
@@ -19,14 +20,18 @@
 			app:subtitleTextColor="@color/toolbar_text_color"
 			app:layout_scrollFlags="scroll|enterAlways"
 			app:subtitle="@string/menu_time_achievement"/>
+		<View
+			android:layout_width="match_parent"
+			android:layout_height="0.1dp"
+			android:background="@color/common_black"/>
 	</android.support.design.widget.AppBarLayout>
 
 	<android.support.v7.widget.RecyclerView
 		android:id="@+id/rv_achievement"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		app:layout_behavior="@string/appbar_scrolling_view_behavior">
+		>
 
 
 	</android.support.v7.widget.RecyclerView>
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
