--- a/app/src/main/res/layout/other_wishes_item.xml
+++ b/app/src/main/res/layout/other_wishes_item.xml
@@ -4,17 +4,15 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:layout_margin="8dp"
-	android:background="#757575"
+	android:layout_margin="4dp"
+	android:background="#FFFFFF"
 	android:orientation="vertical"
 	app:cardCornerRadius="2dp">
 
 	<LinearLayout
+		android:background="#FFFFFF"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginBottom="8dp"
-		android:layout_marginLeft="4dp"
-		android:layout_marginRight="4dp"
 		android:orientation="vertical">
 
 		<TextView
@@ -23,11 +21,8 @@
 			android:layout_height="wrap_content"
 			android:background="#FFF"
 			android:hint="aaaa"
-			android:paddingBottom="8dp"
-			android:paddingLeft="8dp"
-			android:paddingRight="8dp"
-			android:paddingTop="8dp"
-			android:textColor="#757575"
+			android:padding="8dp"
+			android:textColor="@color/common_black"
 			android:textSize="24dp"/>
 
 		<TextView
@@ -37,8 +32,8 @@
 			android:background="#FFF"
 			android:gravity="center"
 			android:hint="2011"
-			android:textColor="#757575"
-			android:textSize="16dp"/>
+			android:textColor="@color/common_black"
+			android:textSize="16sp"/>
 	</LinearLayout>
 
 </android.support.v7.widget.CardView>
