--- a/app/src/main/res/menu/menu_time.xml
+++ b/app/src/main/res/menu/menu_time.xml
@@ -1,23 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 	<item
-		android:id="@+id/menu_time_wish"
-		android:title="@string/menu_time_wish">
+		android:id="@+id/menu_time_more"
+		android:icon="@drawable/ic_more_vert_black_24dp"
+		android:title="more"
+		app:showAsAction="always">
+		<menu>
+			<item
+				android:id="@+id/menu_time_wish"
+				android:icon="@drawable/ic_lamp"
+				android:title="@string/menu_time_wish">
+			</item>
+			<item
+				android:id="@+id/menu_time_achievement"
+				android:icon="@drawable/ic_medal"
+				android:title="@string/menu_time_achievement">
+			</item>
+			<item
+				android:id="@+id/menu_time_skill"
+				android:icon="@drawable/ic_graduation"
+				android:title="@string/menu_time_skill">
+			</item>
+			<item
+				android:id="@+id/menu_time_reset"
+				android:icon="@drawable/ic_setting"
+				android:title="@string/menu_time_reset">
+			</item>
+			<item
+				android:id="@+id/menu_time_about"
+				android:icon="@drawable/ic_info_black_24dp"
+				android:title="@string/menu_time_about">
+			</item>
+		</menu>
 	</item>
-	<item
-		android:id="@+id/menu_time_achievement"
-		android:title="@string/menu_time_achievement">
-	</item>
-	<item
-		android:id="@+id/menu_time_skill"
-		android:title="@string/menu_time_skill">
-	</item>
-	<item
-		android:id="@+id/menu_time_reset"
-		android:title="@string/menu_time_reset">
-	</item>
-	<item
-		android:id="@+id/menu_time_about"
-		android:title="@string/menu_time_about">
-	</item>
+
+	<!--<item-->
+	<!--android:icon="@drawable/ic_lamp"-->
+	<!--android:id="@+id/menu_time_wish"-->
+	<!--android:title="@string/menu_time_wish">-->
+	<!--</item>-->
+	<!--<item-->
+	<!--android:icon="@drawable/ic_medal"-->
+	<!--android:id="@+id/menu_time_achievement"-->
+	<!--android:title="@string/menu_time_achievement">-->
+	<!--</item>-->
+	<!--<item-->
+	<!--android:icon="@drawable/ic_graduation"-->
+	<!--android:id="@+id/menu_time_skill"-->
+	<!--android:title="@string/menu_time_skill">-->
+	<!--</item>-->
+	<!--<item-->
+	<!--android:icon="@drawable/ic_setting"-->
+	<!--android:id="@+id/menu_time_reset"-->
+	<!--android:title="@string/menu_time_reset">-->
+	<!--</item>-->
+	<!--<item-->
+	<!--android:icon="@drawable/ic_about"-->
+	<!--android:id="@+id/menu_time_about"-->
+	<!--android:title="@string/menu_time_about">-->
+	<!--</item>-->
 </menu>
