--- a/app/src/main/res/layout-v21/include_time_activity_card_one.xml
+++ b/app/src/main/res/layout-v21/include_time_activity_card_one.xml
@@ -63,6 +63,7 @@
 				android:layout_height="wrap_content"
 				android:paddingBottom="8dp"
 				android:paddingTop="8dp"
+				android:paddingLeft="8dp"
 				android:text="* %s"
 				/>
 
@@ -78,6 +79,7 @@
 				android:layout_height="wrap_content"
 				android:paddingBottom="8dp"
 				android:paddingTop="8dp"
+				android:paddingLeft="8dp"
 				android:text="* %s"
 				/>
 
@@ -93,6 +95,7 @@
 				android:layout_height="wrap_content"
 				android:paddingBottom="8dp"
 				android:paddingTop="8dp"
+				android:paddingLeft="8dp"
 				android:text="* %s"
 				/>
 
@@ -108,6 +111,7 @@
 				android:layout_height="wrap_content"
 				android:paddingBottom="8dp"
 				android:paddingTop="8dp"
+				android:paddingLeft="8dp"
 				android:text="* %s"
 				/>
 		</LinearLayout>
