--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -8,7 +8,7 @@
 	android:orientation="vertical"
 	tools:context="com.iec.dwx.timer.Activities.AboutActivity">
 
-	<android.support.v7.widget.CardView
+	<android.support.design.widget.AppBarLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
 
@@ -20,7 +20,11 @@
 			app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
 			app:subtitle="@string/menu_time_about"
 			app:subtitleTextColor="@color/toolbar_text_color"/>
-	</android.support.v7.widget.CardView>
+		<View
+			android:layout_width="match_parent"
+			android:layout_height="0.2dp"
+			android:background="@color/common_black"/>
+	</android.support.design.widget.AppBarLayout>
 
 	<LinearLayout
 		android:background="#F4F5F5"
