--- a/app/src/main/res/layout/activity_my_wishes_detail.xml
+++ b/app/src/main/res/layout/activity_my_wishes_detail.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#FFF"
+    android:orientation="vertical"
     tools:context="com.iec.dwx.timer.Fragments.MyWishesFragment"
     android:clickable="true">
     <android.support.design.widget.AppBarLayout
@@ -33,4 +34,4 @@
         android:layout_width="match_parent"
         />
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
