--- a/app/src/main/res/menu/menu_my_wishes.xml
+++ b/app/src/main/res/menu/menu_my_wishes.xml
@@ -4,15 +4,16 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".MainActivity">
 	<item
-		android:id="@+id/menu_my_wishes_add"
-		android:icon="@drawable/ic_add_black_24dp"
-		android:title=""
-		app:showAsAction="ifRoom"
-		/>
-	<item
 		android:id="@+id/menu_my_wishes_others"
 		android:icon="@drawable/ic_cloud_black_24dp"
-		android:title=""
+		android:title="@string/menu_cloud_wish"
 		app:showAsAction="always"
 		/>
+	<item
+		android:id="@+id/menu_my_wishes_add"
+		android:icon="@drawable/ic_add_black_24dp"
+		android:title="@string/menu_my_wish_add"
+		app:showAsAction="ifRoom"
+		/>
+
 </menu>
