--- a/app/src/main/res/menu/menu_my_skill.xml
+++ b/app/src/main/res/menu/menu_my_skill.xml
@@ -4,6 +4,12 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".MainActivity">
 	<item
+		android:id="@+id/menu_my_skill_edit"
+		android:icon="@drawable/ic_mode_edit_black_24dp"
+		android:title="修改"
+		app:showAsAction="always"
+		/>
+	<item
 		android:id="@+id/menu_my_skill_add"
 		android:icon="@drawable/ic_add_black_24dp"
 		android:title="@string/menu_my_skill_add"
