--- a/app/src/main/res/layout-v21/activity_other_wishes.xml
+++ b/app/src/main/res/layout-v21/activity_other_wishes.xml
@@ -24,6 +24,12 @@
             app:subtitle="云端心愿"/>
     </android.support.design.widget.AppBarLayout>
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/other_wishes_swipe_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
     <android.support.v7.widget.RecyclerView
 	    android:background="#FFFFFF"
         android:id="@+id/rv_other_wishes"
@@ -32,4 +38,5 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </android.support.design.widget.CoordinatorLayout>
