--- a/app/src/main/res/layout/activity_other_wishes.xml
+++ b/app/src/main/res/layout/activity_other_wishes.xml
@@ -31,6 +31,9 @@
 		    android:background="@color/common_black"/>
     </android.support.design.widget.AppBarLayout>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/other_wishes_swipe_refresh"
@@ -48,5 +51,6 @@
     </android.support.v7.widget.RecyclerView>
 
     </android.support.v4.widget.SwipeRefreshLayout>
+    </FrameLayout>
 
 </LinearLayout>
