--- a/app/src/main/res/layout-v21/item_wish_comment.xml
+++ b/app/src/main/res/layout-v21/item_wish_comment.xml
@@ -21,4 +21,8 @@
 		android:id="@+id/tv_comment_time"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"/>
+	<View
+		android:background="@color/common_black"
+		android:layout_width="match_parent"
+		android:layout_height="0.1dp"/>
 </LinearLayout>
