--- a/app/src/main/res/values-v19/styles.xml
+++ b/app/src/main/res/values-v19/styles.xml
@@ -9,4 +9,7 @@
 		<item name="android:windowIsTranslucent">true</item>
 	</style>
 
+	<style name="WishTransparent" parent="AppTheme">
+		<item name="android:windowBackground">@android:color/transparent</item>
+	</style>
 </resources>
